# fastapi-claude-voice-agent

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  concurrency.py  config.py  logging.py  main.py  middleware.py  security.py
app/persistence/: db.py  models.py  repositories.py
app/pipeline/: audio.py  llm_claude.py  orchestrator.py  stt_deepgram.py  tts_eleven.py
app/prompts/: system.md
app/routers/: sessions.py  twilio.py  webrtc.py
app/tools/: book_slot.py  check_availability.py  registry.py  send_confirmation.py
docs/: ARCHITECTURE.md  COST.md
migrations/: env.py
migrations/versions/: 20260419_0700_0001_initial_schema.py
tests/: conftest.py  test_audio.py  test_health.py  test_llm_claude.py  test_orchestrator.py  test_tools.py
