[project]
name = "fastapi-claude-voice-agent"
version = "0.1.0"
description = "Realtime voice AI agent: FastAPI + Claude Opus 4.7 + Twilio Media Streams + Deepgram + ElevenLabs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Somchai Juntapracon" }]
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "anthropic>=0.96.0",
    "httpx[http2]>=0.28.1",
    "websockets>=16.0",
    "twilio>=9.10.5",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "python-multipart>=0.0.26",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "UP",         # pyupgrade
    "ASYNC",      # async-await correctness
    "S",          # bandit
    "PTH",        # pathlib over os.path
    "RUF",        # ruff-specific
]
ignore = [
    "S101",       # assert in tests
    "B008",       # FastAPI Depends in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
